feat(webpack): Add webpack support and remove sass support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ addons:
   postgresql: "9.4"
 
 install:
+  - nvm install v6.3.0
+  - npm install -g npm
   - pip install -U pip cookiecutter fabric
 
 script:
