--- a/{{cookiecutter.github_repository}}/provisioner/roles/project_data/meta/main.yml
+++ b/{{cookiecutter.github_repository}}/provisioner/roles/project_data/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 dependencies:
   - { role: supervisor }
-  - { role: nodejs, when: sass_with_django_compressor }
+  - { role: nodejs, when: webpack }
