--- a/{{cookiecutter.github_repository}}/provisioner/roles/project_data/tasks/main.yml
+++ b/{{cookiecutter.github_repository}}/provisioner/roles/project_data/tasks/main.yml
@@ -18,7 +18,7 @@
 - name: Install packages based on package.json.
   npm: path={{ project_path }} global=no
   become: true
-  when: sass_with_django_compressor
+  when: webpack
   tags: ['deploy']
 
 - include: gunicorn.yml
@@ -33,13 +33,8 @@
   become: false
   tags: ['deploy']
 
-- name: Run django-compressor offline
-  django_manage: command=compress app_path={{ project_path }} virtualenv={{ venv_path }}
-  become: false
-  tags: ['deploy']
-  when: sass_with_django_compressor
-  environment:
-    PATH: "$PATH:{{ project_path }}/node_modules/.bin:/usr/bin/"
+- include: webpack.yml
+  when: webpack
 
 - name: Run database migrations
   django_manage: command=migrate app_path={{ project_path }} virtualenv={{ venv_path }}
