--- a/{{cookiecutter.github_repository}}/provisioner/roles/project_data/tasks/webpack.yml
+++ b/{{cookiecutter.github_repository}}/provisioner/roles/project_data/tasks/webpack.yml
@@ -8,4 +8,9 @@
   command: {{ webpack_path }} --config {{ webpack_config }} --progress --colors
   become: false
   tags: ['deploy']
+
+- name: collect static
+  django_manage: command="collectstatic -i js -i css -i server.js -i webpack.base.config.js -i webpack.dev.config.js -i webpack.prod.config.js" app_path={{ project_path }} virtualenv={{ venv_path }}
+  become: false
+  tags: ['deploy']
 {%endraw%}
