--- a/{{cookiecutter.github_repository}}/provisioner/vars.yml
+++ b/{{cookiecutter.github_repository}}/provisioner/vars.yml
@@ -5,4 +5,4 @@ project_repo_remote: origin
 domain_name: {{ cookiecutter.main_module }}.com
 repo_version: master
 pg_gis: {{ 'True' if cookiecutter.postgis.lower() == 'y' else 'False' }}
-webpack: {{ 'True' if cookiecutter.add_webpack.lower() == 'y' else 'False' }}
+webpack_enabled: {{ 'True' if cookiecutter.webpack.lower() == 'y' else 'False' }}
